--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     src: url(LOKICOLA.TTF);
 }
 
+html {
+  height: 100%;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -11,11 +15,9 @@
 
 body {
     background-color: rgb(0, 71, 18);
-    /* background: url(images/fb-pic1.jpg) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover; */
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .navbar {
@@ -30,6 +32,43 @@ body {
 .nav-link {
     text-align: center;
 }
+
+
+
+footer {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+footer .foot {
+    background-color: black;
+    height: 8vh;
+    text-align: center;
+    padding: 2.5vh;
+    width: 110%;
+    margin-top: auto;
+}
+
+
+.fa-brands {
+    color: white;
+}
+
+ul {
+    margin-top: -200px;
+}
+
+
+/* ----CONTACT SECTION---- */
+.contact {
+    border: 1px solid red;
+}
+
+
+/* CONTINUE WORKING ON THIS SHIT */
+
+
 
 .welcome {
     width: auto;
@@ -76,25 +115,23 @@ cite {
     padding: 4px;
 }
 
-.foot {
+
+
+* IMAGES */
+.image-section {
+    margin: 500px;
+}
+
+.gallery-container {
+    
+    align-items: center;
+    margin: 25% 0 10%;
+  }
+  
+  .gallery-footer {
     background-color: black;
-    height: 10vh;
-    text-align: center;
-    padding: 2.5vh;
-}
-
-.fa-brands {
-    color: white;
-}
-
-ul {
-    margin-top: -200px;
-}
-
-.gallery {
-    margin-top: 100px;
-}
-
-#galleryPic {
-    margin: 20px;
-}
+      height: 8vh;
+      text-align: center;
+      padding: 2.5vh;
+      width: 110%;
+  }
