--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@
     src: url(LOKICOLA.TTF);
 }
 
-html {
-  height: 100%;
-}
-
 * {
     box-sizing: border-box;
     margin: 0;
@@ -18,6 +14,25 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 1.75s ease;
+}
+
+.reveal.active {
+    transform: translateY(0px);
+    opacity: 1;
 }
 
 .navbar {
@@ -46,7 +61,7 @@ footer .foot {
     height: 8vh;
     text-align: center;
     padding: 2.5vh;
-    width: 110%;
+    width: 100%;
     margin-top: auto;
 }
 
@@ -71,7 +86,7 @@ ul {
 
 
 .welcome {
-    width: auto;
+    width: 100%;
     height: 50vh;
     margin-top: 50vh;
     color: white;
@@ -87,6 +102,10 @@ ul {
 .blockquote-footer,
 cite {
     color: rgb(255, 145, 0);
+}
+
+.index-img img {
+    width: 100%;
 }
 
 .blockquote p {
@@ -114,6 +133,8 @@ cite {
     list-style-type: none;
     padding: 4px;
 }
+
+
 
 
 
