--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* CONSTANTS */
 @font-face {
     font-family: LOKICOLA;
     src: url(LOKICOLA.TTF);
@@ -11,11 +12,52 @@
 
 body {
     background: linear-gradient(rgb(1, 126, 32), rgb(0, 71, 18));
+}
+
+
+/* HOME PAGE */
+body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
 }
 
+/* NAVIGATION */
+.navbar {
+    background-color: black;
+}
+
+.logo {
+    font-family: 'LOKICOLA';
+    font-size: 2.5rem;
+}
+
+.nav-link {
+    text-align: center;
+}
+
+/* WELCOME */
+.welcome {
+    width: 100%;
+    height: 50vh;
+    margin-top: 50vh;
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+}
+
+.welcome p {
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.welcome-desc,
+.blockquote-footer,
+cite {
+    color: rgb(255, 145, 0);
+}
+
+
+/* INDEX SECTIONS */
 section {
     min-height: 100vh;
     display: flex;
@@ -36,78 +78,13 @@ section {
     opacity: 1;
 }
 
-.navbar {
-    background-color: black;
-}
 
-.logo {
-    font-family: 'LOKICOLA';
-    font-size: 2.5rem;
-}
-
-.nav-link {
-    text-align: center;
-}
-
-
-footer {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-footer .foot {
-    background-color: black;
-    height: 8vh;
-    text-align: center;
-    padding: 2.5vh;
-    width: 100%;
-    margin-top: auto;
-}
-
-
-.fa-brands {
-    color: white;
-}
-
-ul {
-    margin-top: -200px;
-}
-
-
-/* ----CONTACT SECTION---- */
-.contact {
-    border: 1px solid red;
-}
-
-
-/* CONTINUE WORKING ON THIS SHIT */
-
-
-
-.welcome {
-    width: 100%;
-    height: 50vh;
-    margin-top: 50vh;
-    color: white;
-    font-family: 'Montserrat Alternates', sans-serif;
-}
-
-.welcome p {
-    font-size: 20px;
-    text-transform: uppercase;
-}
-
-.welcome-desc,
-.blockquote-footer,
-cite {
-    color: rgb(255, 145, 0);
-}
-
+/* INDEX IMAGES */
 .index-img img {
     width: 100%;
 }
 
+/* REVIEWS */
 .blockquote p {
     color: white;
 }
@@ -117,6 +94,7 @@ cite {
     font-family: 'Montserrat Alternates', sans-serif;
 }
 
+/* ADDRESS */
 .address {
     margin-top: -200px;
 }
@@ -126,6 +104,10 @@ cite {
     /* background-color: rgb(22, 73, 35); */
     color: white;
     font-family: 'Montserrat Alternates', sans-serif;
+}
+
+ul {
+    margin-top: -200px;
 }
 
 .li-day {
@@ -138,21 +120,120 @@ cite {
 
 
 
-* IMAGES */
-.image-section {
-    margin: 500px;
+/* EVENT PAGE */
+
+
+
+/* GALLERY PAGE */
+.gallery {
+    padding: 125px 0;
 }
 
-.gallery-container {
-    
-    align-items: center;
-    margin: 25% 0 10%;
-  }
-  
-  .gallery-footer {
+.gallery img {
+    max-width: 100%;
+    background: rgb(147, 231, 147);
+    padding: 15px;
+    width: 100%;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+}
+
+#gallery-popup .modal-img {
+    width: 100%;
+}
+
+.modal-header {
+    background-color: rgb(243, 130, 0);
+    border-bottom: 40px solid white;
+}
+
+.modal-body {
+    background: rgb(0, 151, 38);
+}
+
+
+/* CONTACT PAGE */
+.contact h2 {
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    text-align: center;
+    /* border: 2px solid blue; */
+    padding-top: 125px;
+    padding-left: 7px;
+    padding-right: 7px;
+}
+
+form {
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    /* border: 3px solid red; */
+    padding-top: 25px;
+    text-transform: uppercase;
+}
+
+.btn-bg {
+    background: rgb(243, 130, 0);
+}
+
+.btn-bg:hover {
+    background: rgb(0, 151, 38);
+}
+
+#message {
+    text-align: center;
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    border: 3px solid red;
+    padding-top: 25px;
+    text-transform: uppercase;
+}
+
+form {
+    position: relative;
+}
+
+.form-text {
+padding-top: -25px;
+}
+
+#floatingTextarea {
+    padding: 50px;
+    width: 95%;
+    border-radius: 10px;
+}
+
+.contact-img {
+    margin-top: 150px;
+    padding-top: 100px;
+}
+
+.contact-address {
+    margin-top: 150px;
+}
+
+
+/* FOOTER */
+footer {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+footer .foot {
     background-color: black;
-      height: 8vh;
-      text-align: center;
-      padding: 2.5vh;
-      width: 110%;
-  }
+    height: 8vh;
+    text-align: center;
+    padding: 2.5vh;
+    width: 100%;
+    margin-top: auto;
+}
+
+.fa-brands {
+    color: white;
+}
+
+
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+}
