--- a/style.css
+++ b/style.css
@@ -101,7 +101,6 @@ cite {
 
 .hoo {
     padding: 25px 0;
-    /* background-color: rgb(22, 73, 35); */
     color: white;
     font-family: 'Montserrat Alternates', sans-serif;
 }
@@ -121,7 +120,25 @@ ul {
 
 
 /* EVENT PAGE */
+.event-list {
+    flex-direction: column;
+    color: white;
+    font-family: 'Montserrat Alternates', sans-serif;
+    text-transform: uppercase;
+}
 
+.event-list h3 {
+    margin-top: 400px;
+    font-size: 3rem;
+    text-shadow: 3px 3px rgb(196, 104, 0);
+}
+
+.event-list ul {
+    text-align: center;
+    list-style-type: none;
+    padding: 30px;
+    margin: auto;
+}
 
 
 /* GALLERY PAGE */
@@ -194,7 +211,7 @@ form {
 }
 
 .form-text {
-padding-top: -25px;
+    padding-top: -25px;
 }
 
 #floatingTextarea {
