--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ cite {
     height: 300px;
 }
 
+/*
 .grid-item:nth-of-type(2),
 .grid-item:nth-of-type(4) {
     margin-top: 150px;
@@ -198,6 +199,7 @@ cite {
 .grid-item:nth-of-type(6):hover {
     transform: scale(1.2);
 }
+*/
 
 iframe {
     /* box-shadow: 0px 0px 50px#000; */
